[tool.isort]
profile = "black"

[tool.poetry]
name = "tbump"
version = "6.3.2"
description = "Bump software releases"
readme = "README.rst"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
license = "BSD-3-Clause"
repository = "https://github.com/dmerejkowsky/tbump"

[tool.poetry.urls]
Changelog = "https://github.com/dmerejkowsky/tbump/blob/main/Changelog.rst"
Issues = "https://github.com/dmerejkowsky/tbump/issues"

[tool.poetry.dependencies]
# Note: keep this in sync with .github/workflows/tests.yml
python = "^3.6.2"

attrs = "^19.3.0"
docopt = "^0.6.2"
cli-ui = "^0.10.3"
schema = "^0.7.1"
tomlkit = ">=0.5.8;<0.8"

[tool.poetry.dev-dependencies]
# Task runner
invoke = "^1.5.0"

# Tests
coverage = "^5.1"
pytest = "^6.2.1"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"

# Linters
black = "21.5b0"
flake8 = "^3.7.9"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.2.2"
pep8-naming = "^0.11.1"
isort = "^5.6.4"
mypy = "^0.790"

# Deps scanning
safety = "^1.9.0"

[tool.poetry.scripts]
tbump = "tbump.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
