[tool.isort]
profile = "black"

[tool.poetry]
name = "tbump"
version = "6.11.0"
description = "Bump software releases"
readme = "README.rst"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
license = "BSD-3-Clause"
repository = "https://github.com/dmerejkowsky/tbump"

[tool.poetry.urls]
Changelog = "https://github.com/dmerejkowsky/tbump/blob/main/Changelog.rst"
Issues = "https://github.com/dmerejkowsky/tbump/issues"

[tool.poetry.dependencies]
# Note: keep this in sync with .github/workflows/tests.yml
python = "^3.9"

docopt = "^0.6.2"
cli-ui = ">=0.10.3"
schema = "^0.7.1"
tomlkit = "^0.11"
packaging = "^24.0"

[tool.poetry.dev-dependencies]
# Task runner
invoke = "^2.2"

# Tests
pytest = "^8.3"
pytest-cov = "^6.0"
pytest-mock = "^3.14"

# Linters
black = "^24.3"
flake8 = "7.1"
flake8-bugbear = "^24.12"
flake8-comprehensions = "^3.16"
pep8-naming = "^0.14"
isort = "^5.13"
mypy = "1.13"

[tool.poetry.scripts]
tbump = "tbump.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
