[metadata]
name = tbump
version = 6.0.2
description = Bump software releases
long_description = file:README.rst
url = https://github.com/TankerHQ/tbump
author = Dimitri Merejkowsky

[options]
# Note: keep this in sync with .travis.yml
python_requires = >="3.5"
packages = find:
include_package_data = True
install_requires =
 attrs
 docopt
 path
 cli-ui>=0.9.0
 schema
 toml

[options.extras_require]
dev =
  black==19.3b0 ; python_version >= "3.6"

  # tests
  pytest==3.8.1
  pytest-sugar
  pytest-mock
  pytest-cov
  codecov==2.0.15

  # linters
  mypy==0.730
  flake8==3.5.0

[entry_points]
console_scripts =
  tbump = tbump.main:main

[flake8]
exclude =
  build
  .venv
max-line-length = 100
